busca paginada e filtros da tela

--- a/src/app/pages/clientes/clientesCadastro.component.html
+++ b/src/app/pages/clientes/clientesCadastro.component.html
@@ -16,8 +16,8 @@
                     </div>
                 </ng-template>
             </p-toolbar>
-            <p-table #dt [value]="products" [columns]="cols" responsiveLayout="scroll" [rows]="10"
-                [globalFilterFields]="['name','country.name','representative.name','status']" [paginator]="true"
+            <p-table #dt [value]="clientes" responsiveLayout="scroll" [rows]="10"
+                [globalFilterFields]="['nome','sobrenome','cpf','email','contato']" [paginator]="true"
                 [rowsPerPageOptions]="rowsPerPageOptions" [showCurrentPageReport]="true" (onPage)="page($event)"
                 currentPageReportTemplate="Mostrando {first} até {last} de {totalRecords} registros"
                 [(selection)]="selectedProducts" selectionMode="multiple" [rowHover]="true" dataKey="id">
@@ -36,38 +36,47 @@
                         <th style="width: 3rem">
                             <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
                         </th>
-                        <th pSortableColumn="code">Código <p-sortIcon field="code"></p-sortIcon></th>
-                        <th pSortableColumn="name">Nome <p-sortIcon field="name"></p-sortIcon></th>
-                        <th pSortableColumn="price">Contato <p-sortIcon field="price"></p-sortIcon></th>
-                        <th pSortableColumn="category">CPF<p-sortIcon field="category"></p-sortIcon></th>
-                        <th pSortableColumn="inventoryStatus">Status <p-sortIcon field="inventoryStatus"></p-sortIcon>
-                        </th>
+                        <th pSortableColumn="id">Código <p-sortIcon field="id"></p-sortIcon></th>
+                        <th pSortableColumn="nome">Nome <p-sortIcon field="nome"></p-sortIcon></th>
+                        <th pSortableColumn="sobrenome">Sobrenome <p-sortIcon field="sobrenome"></p-sortIcon></th>
+                        <th pSortableColumn="cpf">CPF<p-sortIcon field="cpf"></p-sortIcon></th>
+                        <th pSortableColumn="email">Email <p-sortIcon field="email"></p-sortIcon></th>
+                        <th pSortableColumn="contato">Celular <p-sortIcon field="celular"></p-sortIcon></th>
+                        <th pSortableColumn="contatoFixo">Fixo <p-sortIcon field="fixo"></p-sortIcon></th>
                         <th></th>
                     </tr>
                 </ng-template>
-                <ng-template pTemplate="body" let-product>
+                <ng-template pTemplate="body" let-cliente>
                     <tr>
                         <td>
-                            <p-tableCheckbox [value]="product"></p-tableCheckbox>
+                            <p-tableCheckbox [value]="cliente"></p-tableCheckbox>
                         </td>
-                        <td style="width:17%; min-width:10rem;"><span class="p-column-title">Code</span>
-                            {{product.code || product.id}}
+                        <td style="width:10%; min-width:10rem;"><span class="p-column-title">Código</span>
+                            {{cliente.id}}
                         </td>
-                        <td style="width:20%; min-width:10rem;">
+                        <td style="width:12%; min-width:10rem;">
                             <span class="p-column-title">Name</span>
-                            {{product.name}}
+                            {{cliente.nome}}
                         </td>
-                        <td style="width:17%; min-width:10rem;">
-                            <span class="p-column-title">Contato</span>
-                            {{product.name}}
+                        <td style="width:16%; min-width:10rem;">
+                            <span class="p-column-title">Sobrenome</span>
+                            {{cliente.sobrenome}}
                         </td>
-                        <td style="width:17%; min-width:10rem;">
+                        <td style="width:15%; min-width:10rem;">
                             <span class="p-column-title">CPF</span>
-                            {{product.category}}
+                            {{cliente.cpf}}
                         </td>
-                        <td style="width:17%; min-width: 10rem;"><span class="p-column-title">Status</span>
-                            <span
-                                [class]="'product-badge status-' + (product.inventoryStatus ? product.inventoryStatus.toLowerCase() : '')">{{product.inventoryStatus}}</span>
+                        <td style="width:15%; min-width:10rem;">
+                            <span class="p-column-title">Email</span>
+                            {{cliente.email}}
+                        </td>
+                        <td style="width:13%; min-width:10rem;">
+                            <span class="p-column-title">Celular</span>
+                            {{cliente.contato}}
+                        </td>
+                        <td style="width:13%; min-width:10rem;">
+                            <span class="p-column-title">Fixo</span>
+                            {{cliente.contatoFixo}}
                         </td>
                         <td>
                             <div class="flex">
