busca paginada e filtros da tela

--- a/src/app/pages/clientes/clientesCadastro.component.html
+++ b/src/app/pages/clientes/clientesCadastro.component.html
@@ -12,7 +12,7 @@
                             class="p-button-success mr-2" (click)="openNew()"></button>
                         <button id="deleteAll" pButton pRipple label="Deletar" style="width:160px" icon="pi pi-trash"
                             class="p-button-danger" (click)="deleteSelectedProducts()"
-                            [disabled]="!selectedProducts || !selectedProducts.length"></button>
+                            [disabled]="!selectedClientes || !selectedClientes.length"></button>
                     </div>
                 </ng-template>
             </p-toolbar>
@@ -20,7 +20,7 @@
                 [globalFilterFields]="['nome','sobrenome','cpf','email','contato']" [paginator]="true"
                 [rowsPerPageOptions]="rowsPerPageOptions" [showCurrentPageReport]="true" (onPage)="page($event)"
                 currentPageReportTemplate="Mostrando {first} até {last} de {totalRecords} registros"
-                [(selection)]="selectedProducts" selectionMode="multiple" [rowHover]="true" dataKey="id">
+                [(selection)]="selectedClientes" selectionMode="multiple" [rowHover]="true" dataKey="id">
                 <ng-template pTemplate="caption">
                     <div class="flex flex-column md:flex-row md:justify-content-between md:align-items-center">
                         <h5 class="m-0">Gerenciamento de Clientes</h5>
@@ -72,25 +72,25 @@
                         </td>
                         <td style="width:13%; min-width:10rem;">
                             <span class="p-column-title">Celular</span>
-                            {{cliente.contato}}
+                            {{cliente.celular}}
                         </td>
                         <td style="width:13%; min-width:10rem;">
                             <span class="p-column-title">Fixo</span>
-                            {{cliente.contatoFixo}}
+                            {{cliente.fixo}}
                         </td>
                         <td>
                             <div class="flex">
                                 <button pButton pRipple icon="pi pi-pencil"
                                     class="p-button-rounded p-button-success mr-2"
-                                    (click)="editProduct(product)"></button>
+                                    (click)="editarCliente(cliente)"></button>
                                 <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-danger"
-                                    (click)="deleteProduct(product)"></button>
+                                    (click)="deleteProduct(cliente)"></button>
                             </div>
                         </td>
                     </tr>
                 </ng-template>
             </p-table>
-            <p-dialog [(visible)]="productDialog" [style]="{width: '800px'}" header="{{titulo}}" [modal]="true"
+            <p-dialog [(visible)]="clienteDialog" [style]="{width: '800px'}" header="{{titulo}}" [modal]="true"
                 class="p-fluid">
                 <ng-template pTemplate="content">
                     <form [formGroup]="formGroup">
@@ -98,7 +98,7 @@
                             <div class="field col">
                                 <div class="form-group">
                                     <span class="p-float-label">
-                                        <input pInputText id="nome" formControlName="nome"
+                                        <input pInputText id="nome" formControlName="nome" [(ngModel)]="cliente.nome"
                                             [ngClass]="{'ng-invalid ng-dirty' : isValidated(formGroup, 'nome')}" />
                                         <label htmlFor="nome">Nome</label>
                                     </span>
@@ -109,7 +109,7 @@
                             <div class="field col">
                                 <div class="form-group">
                                     <span class="p-float-label">
-                                        <input pInputText id="sobrenome" formControlName="sobrenome"
+                                        <input pInputText id="sobrenome" formControlName="sobrenome"  [(ngModel)]="cliente.sobrenome"
                                             [ngClass]="{'ng-invalid ng-dirty' : isValidated(formGroup, 'sobrenome')}" />
                                         <label htmlFor="sobrenome">Sobrenome</label>
                                     </span>
@@ -122,7 +122,7 @@
                             <div class="field col" style="padding-top: 15px;">
                                 <div class="form-group">
                                     <span class="p-float-label">
-                                        <p-inputMask mask="999.999.999-99" id="cpf" formControlName="cpf"
+                                        <p-inputMask mask="999.999.999-99" id="cpf" formControlName="cpf"  [(ngModel)]="cliente.cpf"
                                             placeholder="(99) 99999-9999"></p-inputMask>
                                         <label htmlFor="cpf">CPF</label>
                                     </span>
@@ -131,7 +131,8 @@
                             <div class="field col" style="padding-top: 15px;">
                                 <div class="form-group">
                                     <span class="p-float-label">
-                                        <input pInputText id="email"[ngClass]="{'ng-invalid ng-dirty' : isEmailValid(formGroup, 'email')}" formControlName="email" />
+                                        <input pInputText id="email"[ngClass]="{'ng-invalid ng-dirty' : isEmailValid(formGroup, 'email')}" 
+                                        formControlName="email" [(ngModel)]="cliente.email"/>
                                         <label htmlFor="email">Email</label>
                                     </span>
                                     <small class="ng-invalid ng-dirty" *ngIf="isEmailValid(formGroup, 'email')">Email Inválido.</small>
@@ -142,21 +143,21 @@
                             <div class="field col" style="padding-top: 15px;">
                                 <div class="form-group">
                                     <span class="p-float-label">
-                                        <p-inputMask mask="(99) 99999-9999" id="contato" formControlName="contato"
-                                            placeholder="(99) 99999-9999"
-                                            [ngClass]="{'ng-invalid ng-dirty' : isValidated(formGroup, 'contato')}"></p-inputMask>
-                                        <label htmlFor="contato">Celular</label>
+                                        <p-inputMask mask="(99) 99999-9999" id="celular" formControlName="celular"
+                                            placeholder="(99) 99999-9999"  [(ngModel)]="cliente.celular"
+                                            [ngClass]="{'ng-invalid ng-dirty' : isValidated(formGroup, 'celular')}"></p-inputMask>
+                                        <label htmlFor="celular">Celular</label>
                                     </span>
-                                    <small class="ng-dirty ng-invalid" *ngIf="isValidated(formGroup, 'contato')">Campo
+                                    <small class="ng-dirty ng-invalid" *ngIf="isValidated(formGroup, 'celular')">Campo
                                         Obrigatório.</small>
                                 </div>
                             </div>
                             <div class="field col" style="padding-top: 15px;">
                                 <div class="form-group">
                                     <span class="p-float-label">
-                                        <p-inputMask id="contatoFixo" mask="(99) 99999-9999"
-                                            formControlName="contatoFixo" placeholder="(99) 99999-9999"></p-inputMask>
-                                        <label htmlFor="contatoFixo">Fixo</label>
+                                        <p-inputMask id="fixo" mask="(99) 99999-9999"  [(ngModel)]="cliente.fixo"
+                                            formControlName="fixo" placeholder="(99) 99999-9999"></p-inputMask>
+                                        <label htmlFor="fixo">Fixo</label>
                                     </span>
                                 </div>
                             </div>
@@ -172,27 +173,27 @@
                     </ng-template>
             </p-dialog>
 
-            <p-dialog [(visible)]="deleteProductDialog" header="Confirm" [modal]="true" [style]="{width:'450px'}">
+            <p-dialog [(visible)]="deleteClienteDialog" header="Confirm" [modal]="true" [style]="{width:'450px'}">
                 <div class="flex align-items-center justify-content-center">
                     <i class="pi pi-exclamation-triangle mr-3" style="font-size: 2rem"></i>
                     <span *ngIf="product">Deseja deletar o cliente: <b>{{product.name}}</b>?</span>
                 </div>
                 <ng-template pTemplate="footer">
                     <button pButton pRipple icon="pi pi-times" class="p-button-text" label="Não"
-                        (click)="deleteProductDialog = false"></button>
+                        (click)="deleteClienteDialog = false"></button>
                     <button pButton pRipple icon="pi pi-check" class="p-button-text" label="Sim"
                         (click)="confirmDelete()"></button>
                 </ng-template>
             </p-dialog>
 
-            <p-dialog [(visible)]="deleteProductsDialog" header="Confirm" [modal]="true" [style]="{width:'450px'}">
+            <p-dialog [(visible)]="deleteClientesDialog" header="Confirm" [modal]="true" [style]="{width:'450px'}">
                 <div class="flex align-items-center justify-content-center">
                     <i class="pi pi-exclamation-triangle mr-3" style="font-size: 2rem"></i>
                     <span>Deseja deletar todos os clientes selecionados?</span>
                 </div>
                 <ng-template pTemplate="footer">
                     <button pButton pRipple icon="pi pi-times" class="p-button-text" label="Não"
-                        (click)="deleteProductsDialog = false"></button>
+                        (click)="deleteClientesDialog = false"></button>
                     <button pButton pRipple icon="pi pi-check" class="p-button-text" label="Sim"
                         (click)="confirmDeleteSelected()"></button>
                 </ng-template>
