--- a/src/app/pages/produtos/produtosCadastro.component.html
+++ b/src/app/pages/produtos/produtosCadastro.component.html
@@ -18,7 +18,7 @@
             </p-toolbar>
             <p-table #dt [value]="products" [columns]="cols" responsiveLayout="scroll" [rows]="10"
                 [globalFilterFields]="['name','country.name','representative.name','status']" [paginator]="true"
-                [rowsPerPageOptions]="[10,20,30]" [showCurrentPageReport]="true"
+                [rowsPerPageOptions]="[10,20,30]" [showCurrentPageReport]="true" (onPage)="page($event)"
                 currentPageReportTemplate="Mostrando {first} até {last} de {totalRecords} registros"
                 [(selection)]="selectedProducts" selectionMode="multiple" [rowHover]="true" dataKey="id">
                 <ng-template pTemplate="caption">
